# inxlib

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/inxlib/: inx.hpp  types.hpp
include/inxlib/data/: binary_tree.hpp  bit_table.hpp  block_array.hpp  factory.hpp  line_array.hpp  mary_tree.hpp  redblack_tree.hpp  slice_array.hpp  slice_factory.hpp
include/inxlib/io/: null.hpp  transformers.hpp
include/inxlib/memory/: block_array.hpp  factory.hpp  object.hpp  slice_array.hpp  slice_factory.hpp
include/inxlib/util/: bits.hpp  functions.hpp  iterator.hpp  math.hpp  numeric_types.hpp  virtual_pointer.hpp  xoshiro256.hpp
inxflow/: CMakeLists.txt
inxflow/examples/: CMakeLists.txt
inxflow/examples/custom_command/: custom_command.cpp
inxflow/examples/var_store/: var_store.cpp
inxflow/include/inxflow/: exceptions.hpp  framework.hpp  types.hpp
inxflow/include/inxflow/cmd/: command.hpp  types.hpp
inxflow/include/inxflow/data/: group_template.hpp  serialize.hpp  string_serialize.hpp  types.hpp  value_group.hpp
inxflow/include/inxflow/util/: params.hpp  string.hpp
inxflow/src/: CMakeLists.txt  framework.cpp
inxflow/src/data/: group_template.cpp  serialize.cpp
inxflow/src/util/: params.cpp  string.cpp
inxflow/tests/: CMakeLists.txt  cmdparse.cpp
tests/: CMakeLists.txt
tests/compile/: CMakeLists.txt  compile.cpp  compile_file.cpp.in  generate_src.cmake
tools/: src_update.py
